fix text wrapping

--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -157,6 +157,7 @@ margin-left: 10px;
 
 .pos-text {
   margin-top: 15px;
+  padding-right:15px;
 }
 
 .sp{
